<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:padding="@dimen/default_card_padding"
        android:text="@string/title_dialog"
        android:textColor="@android:color/white"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small_margin"
        android:layout_marginStart="16dp"
        android:text="@string/student_name"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_student_name"
        app:layout_constraintEnd_toStartOf="@+id/et_student_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_small_margin"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_add_student_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/button_submit"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_cancel"
        app:layout_constraintTop_toBottomOf="@+id/et_student_name" />

    <TextView
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/button_cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/large_font"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_submit"
        app:layout_constraintEnd_toStartOf="@+id/bt_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>